base/api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-api-deployment
  namespace: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-api
  template:
    metadata:
      labels:
        app: demo-api
    spec:
      imagePullSecrets:
        - name: docker-secret
      containers:
        - name: demo-api
          ports:
            - containerPort: 80
