base/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-api-service
  namespace: demo
spec:
  selector:
    app: demo-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
